@@ -908,3 +908,7 @@ Mon Mar 13 23:22:23 2006                        Michael Jennings (mej)
 
 Allow POST requests to be redirected.
 ----------------------------------------------------------------------
+Mon Mar 13 22:24:02 2006                        Michael Jennings (mej)
+
+Support cookies when uploading/downloading.
+----------------------------------------------------------------------
